--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -5,12 +5,12 @@ highlight_color: '#3498db'
 
 # Profile links on the left sidebar, leave blank to ignore
 social:
-  github: swanson
+  github: roymu
   #bitbucket: philipj
-  hacker_news: swanson
+  #hacker_news: swanson
   #stackexchange: 348619
   #stackoverflow: 348619
-  twitter: _swanson
+  #twitter: _swanson
   #facebook: zuck
   #tumblr: animalygifs
   #linkedin: philipjagielski
@@ -18,9 +18,9 @@ social:
   #gravatar: 86e6ff8f75f9daef42d53b7f8002fd95
 
 # "Hi, I'm _______"
-name: Matt Swanson
-email: test@example.com
-tagline: "weak opinions, strongly held"
+name: Roy Mustang
+email: r@roymu.com
+tagline: "Strong opinons about almost everything that I come across"
 
 # Google Analytics key, leave blank to ignore
 google_analytics_key: UA-xxxx-x
